--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <a class="text-gray-900 font-bold" href="">Home</a>
             </li>
             <li class="mr-12">
-              <a class="text-gray-400 hover:text-gray-900" href="">Contact</a>
+              <a class="text-gray-400 hover:text-gray-900 hover:font-bold" href="">Contact</a>
             </li>
             <li class="mr-12">
-              <a class="text-gray-400 hover:text-gray-900" href="">About Us</a>
+              <a class="text-gray-400 hover:text-gray-900 hover:font-bold" href="">About Us</a>
             </li>
           </ul>
           <span class="flex">
@@ -50,15 +50,82 @@
     <!-- main -->
     <main class="container mx-auto">
       <!-- flower-banner -->
-      <section class="flex flex-col-reverse lg:flex-row lg:items-end lg:justify-between mt-32">
+      <section class="flex flex-col-reverse xl:flex-row xl:items-end xl:justify-between mt-32">
         <!-- banner content -->
         <div class="mt-4">
-          <h1 class="text-black font-['Noto_Serif'] font-bold text-4xl md:text-6xl leading-normal">ALWAYS <span class="text-orange-600">FRESH FLOWERS</span></h1>
-          <p class="text-gray-500 mt-3 text-xl">Indulge your senses with the beauty and fragrance of  our fresh flower shop. From classic roses to exotic  blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+          <h1 class="text-black font-['Noto_Serif'] font-bold text-6xl leading-tight">ALWAYS <span class="text-orange-600">FRESH FLOWERS</span></h1>
+          <p class="text-gray-500 mt-3 text-xl pr-0 md:pr-48">Indulge your senses with the beauty and fragrance of  our fresh flower shop. From classic roses to exotic  blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
         </div>
         <!-- banner image -->
         <img class="" src="assets/hero-flower.png" alt="">
       </section>
+      <!-- flower-carts -->
+       <section class="mt-32">
+        <!-- flower cart title -->
+        <div class="text-center">
+            <h2 class="text-5xl text-black font-['Noto_Serif'] font-bold"><span class="text-orange-600">Our</span> Plants</h2>
+            <p class="text-gray-500 mt-3 text-xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+        <!-- flower cart container -->
+         <div class="grid grid-cols-2 md:grid-cols-4 mt-12 gap-x-5 gap-y-8">
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="w-full bg-orange-500 text-white font-semibold w-full py-2 cursor-pointer ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+            <!-- flower cart item -->
+             <div class="text-center mx-auto">
+                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
+                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
+                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
+             </div>
+         </div>
+       </section>
     </main>
   </body>
 </html>
