Add flower feature section

--- a/index.html
+++ b/index.html
@@ -1,131 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flower Shop</title>
-    <!-- fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  </head>
-  <body class="font-[inter]">
-    <!-- header -->
-    <header>
-      <!-- navbar -->
-      <div
-        class="flex justify-between container mx-auto pt-4 md:pt-12 content-center items-center"
-      >
-        <!-- logo -->
-        <div>
-          <img
-            class="w-[63px] h-[38px] md:w-[135px] md:h-[82px]"
-            src="assets/logo.png"
-            alt=""
-          />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flower Shop</title>
+  <!-- fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
+
+<body class="font-[inter]">
+  <!-- header -->
+  <header>
+    <!-- navbar -->
+    <div class="flex justify-between container mx-auto pt-4 md:pt-12 content-center items-center">
+      <!-- logo -->
+      <div>
+        <img class="w-[63px] h-[38px] md:w-[135px] md:h-[82px]" src="assets/logo.png" alt="" />
+      </div>
+      <!-- menu and cart-->
+      <div class="flex items-center">
+        <ul class="md:flex hidden">
+          <li class="mr-12">
+            <a class="text-gray-900 font-bold" href="">Home</a>
+          </li>
+          <li class="mr-12">
+            <a class="text-gray-400 hover:text-gray-900 hover:font-bold" href="">Contact</a>
+          </li>
+          <li class="mr-12">
+            <a class="text-gray-400 hover:text-gray-900 hover:font-bold" href="">About Us</a>
+          </li>
+        </ul>
+        <span class="flex">
+          <img src="assets/shopping-cart.svg" alt="" />
+          <a class="ml-2" href="">Cart ($56)</a>
+        </span>
+      </div>
+    </div>
+  </header>
+  <!-- main -->
+  <main class="container mx-auto">
+    <!-- flower-banner -->
+    <section class="flex flex-col-reverse xl:flex-row xl:items-end xl:justify-between mt-32">
+      <!-- banner content -->
+      <div class="mt-4">
+        <h1 class="text-black font-['Noto_Serif'] font-bold text-6xl leading-tight">
+          ALWAYS <span class="text-orange-600">FRESH FLOWERS</span>
+        </h1>
+        <p class="text-gray-500 mt-3 text-xl pr-0 md:pr-48">
+          Indulge your senses with the beauty and fragrance of our fresh
+          flower shop. From classic roses to exotic blooms, we offer a wide
+          variety of fresh flowers that are perfect for any occasion.
+        </p>
+      </div>
+      <!-- banner image -->
+      <img class="" src="assets/hero-flower.png" alt="" />
+    </section>
+    <!-- flower-carts -->
+    <section class="mt-32">
+      <!-- flower cart title -->
+      <div class="text-center">
+        <h2 class="text-5xl text-black font-['Noto_Serif'] font-bold">
+          <span class="text-orange-600">Our</span> Plants
+        </h2>
+        <p class="text-gray-500 mt-3 text-xl">
+          Indulge your senses with the beauty and fragrance of our fresh
+          flower shop. From <br />
+          classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+      </div>
+      <!-- flower cart container -->
+      <div class="grid grid-cols-2 md:grid-cols-4 mt-12 gap-x-5 gap-y-10">
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="w-full bg-orange-500 text-white font-semibold w-full py-2 cursor-pointer">
+            ADD TO CART
+          </button>
         </div>
-        <!-- menu and cart-->
-        <div class="flex items-center">
-          <ul class="md:flex hidden">
-            <li class="mr-12">
-              <a class="text-gray-900 font-bold" href="">Home</a>
-            </li>
-            <li class="mr-12">
-              <a class="text-gray-400 hover:text-gray-900 hover:font-bold" href="">Contact</a>
-            </li>
-            <li class="mr-12">
-              <a class="text-gray-400 hover:text-gray-900 hover:font-bold" href="">About Us</a>
-            </li>
-          </ul>
-          <span class="flex">
-            <img src="assets/shopping-cart.svg" alt="" />
-            <a class="ml-2" href="">Cart ($56)</a>
-          </span>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
+        </div>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
+        </div>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
+        </div>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
+        </div>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
+        </div>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
+        </div>
+        <!-- flower cart item -->
+        <div class="text-center mx-auto">
+          <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="" />
+          <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">
+            Lily Blossom
+          </h4>
+          <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
+          <button class="bg-orange-500 text-white font-semibold py-2 w-full cursor-pointer">
+            ADD TO CART
+          </button>
         </div>
       </div>
-    </header>
-    <!-- main -->
-    <main class="container mx-auto">
-      <!-- flower-banner -->
-      <section class="flex flex-col-reverse xl:flex-row xl:items-end xl:justify-between mt-32">
-        <!-- banner content -->
-        <div class="mt-4">
-          <h1 class="text-black font-['Noto_Serif'] font-bold text-6xl leading-tight">ALWAYS <span class="text-orange-600">FRESH FLOWERS</span></h1>
-          <p class="text-gray-500 mt-3 text-xl pr-0 md:pr-48">Indulge your senses with the beauty and fragrance of  our fresh flower shop. From classic roses to exotic  blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+    </section>
+    <!-- flower feature -->
+    <section class="relative mt-40">
+      <img class="hidden lg:block  absolute -top-32 left-[22rem] w-[286px] h-[286px]" src="assets/trusted-badge.png" alt="">
+      <div class="flex flex-col lg:flex-row justify-between items-center gap-16">
+        <img class="rounded-sm" src="assets/flower-store.png" alt="" />
+        <!-- feature content -->
+        <div>
+          <h3 class="font-['noto_serif'] font-bold text-2xl md:text-5xl text-black leading-tight xl:pr-60 pr-0">
+            Flower & Plants Lover
+          </h3>
+          <ul class="mt-5">
+            <li class="list-disc text-lg md:text-xl ml-5 text-gray-500 mb-5 pr-0 xl:pr-48">
+              ndulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a
+              wide variety of fresh.
+            </li>
+            <li class="list-disc text-lg md:text-xl ml-5 text-gray-500 mb-5 pr-0 xl:pr-48">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a
+              wide variety of fresh.
+            </li>
+            <li class="list-disc text-lg md:text-xl ml-5 text-gray-500 mb-5 pr-0 xl:pr-48">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a
+              wide variety of fresh.
+            </li>
+          </ul>
         </div>
-        <!-- banner image -->
-        <img class="" src="assets/hero-flower.png" alt="">
-      </section>
-      <!-- flower-carts -->
-       <section class="mt-32">
-        <!-- flower cart title -->
-        <div class="text-center">
-            <h2 class="text-5xl text-black font-['Noto_Serif'] font-bold"><span class="text-orange-600">Our</span> Plants</h2>
-            <p class="text-gray-500 mt-3 text-xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-        </div>
-        <!-- flower cart container -->
-         <div class="grid grid-cols-2 md:grid-cols-4 mt-12 gap-x-5 gap-y-8">
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="w-full bg-orange-500 text-white font-semibold w-full py-2 cursor-pointer ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-            <!-- flower cart item -->
-             <div class="text-center mx-auto">
-                <img class="rounded-sm mx-0" src="assets/sample-flower-image.png" alt="">
-                <h4 class="text-xl text-[#111111] font-medium mb-2 mt-4">Lily Blossom</h4>
-                <h5 class="text-xl text-[#111111] font-bold mb-4">20 USD</h5>
-                <button class="bg-orange-500 text-white font-semibold py-2 w-full  cursor-pointer  ">ADD TO CART</button>
-             </div>
-         </div>
-       </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
