Add flower deals

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
     <!-- flower feature -->
     <section class="relative mt-40">
-      <img class="hidden lg:block  absolute -top-32 left-[22rem] w-[286px] h-[286px]" src="assets/trusted-badge.png" alt="">
+      <img class="hidden lg:block  absolute -top-32 left-[22rem] w-[286px] h-[286px] drop-shadow-xl" src="assets/trusted-badge.png" alt="">
       <div class="flex flex-col lg:flex-row justify-between items-center gap-16">
         <img class="rounded-sm" src="assets/flower-store.png" alt="" />
         <!-- feature content -->
@@ -195,6 +195,37 @@
         </div>
       </div>
     </section>
+    <!-- deals section -->
+     <section class="mt-32">
+      <!-- deals section title -->
+      <div class="text-center">
+        <h2 class="text-5xl text-black font-['Noto_Serif'] font-bold">
+          <span class="text-orange-600">Latest</span>Deals
+        </h2>
+        <p class="text-gray-500 mt-3 text-xl">
+          Indulge your senses with the beauty and fragrance of our fresh
+          flower shop. From <br />
+          classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+      </div>
+      <!-- deals container -->
+       <div class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 justify-center gap-x-4 gap-y-4 mt-20 md:mt-32">
+
+        <div class="relative bg-[url('./assets/deal-bloom.png')] bg-cover bg-center h-[200px] w-full flex flex-col justify-center items-center lg:col-span-1 md:col-span-1 rounded-lg">
+          <div class="absolute inset-0 bg-black/50 rounded-lg"></div>
+          <h5 class="relative z-10 text-white text-xl font-bold font-['noto_serif']">60% Off | Bloom Plant</h5>
+          <a class="relative z-10 underline text-white font-semibold mt-2" href="">Shop Now</a>
+        </div>
+        <div class="relative bg-[url('./assets/deal-zabo.png')] bg-cover bg-center flex flex-col lg:col-span-2 lg:row-span-2 md:col-span-1 lg:h-[416px] h-[200px] justify-center items-center rounded-lg">
+          <div class="absolute inset-0 bg-black/50 rounded-lg"></div>
+          <h5 class="relative z-10 text-white text-xl font-bold font-['noto_serif']">60% Off | Bloom Plant</h5>
+          <a class="relative z-10 underline text-white font-semibold font-['noto-serif'] mt-2" href="">Shop Now</a></div>
+        <div class="relative bg-[url('./assets/deal-ana.png')] bg-cover bg-center flex flex-col justify-center items-center md:col-span-2 lg:col-span-1 h-[200px] w-full rounded-lg">
+          <div class="absolute inset-0 bg-black/50 rounded-lg"></div>
+          <h5 class="relative z-10 text-white text-xl font-bold font-['noto_serif']">60% Off | Bloom Plant</h5>
+          <a class="relative z-10 underline text-white font-semibold font-['noto-serif'] mt-2" href="">Shop Now</a></div>
+       </div>
+     </section>
   </main>
 </body>
 
